ClassRoom cards align correctly

--- a/blazorTeddy/wwwroot/css/site.css
+++ b/blazorTeddy/wwwroot/css/site.css
@@ -162,5 +162,12 @@ app {
     background-color: slategray;
     margin: 20px;
     border:hidden;
-  padding: 20px;
+    padding: 20px;
+}
+
+.seatingAssignments {
+    display: inline-block;
+}
+.seatingAssignments .nav-link {
+    display: inline;
 }
